--- a/experiences/templates/experiences/experience_list.html
+++ b/experiences/templates/experiences/experience_list.html
@@ -1,3 +1,4 @@
+<div style="font-family: Verdana,Tahoma,Arial,sans-serif;color:#6666ff;margin:2em;font-style:italic;">
 <div><p>Experiences List HTML</p></div>
 {% block content %}
     <h4>Experiences</h4>
@@ -6,4 +7,5 @@
             <li>{{ experience.title }}</li>
         {% endfor %}
     </ul>
+</div>
 {% endblock %}
