updated html splash page

--- a/welcome/templates/welcome/index.html
+++ b/welcome/templates/welcome/index.html
@@ -209,6 +209,13 @@ pre {
 
 </head>
 <body>
+<section class='extended_links'>
+    <h4>Extended links</h4>
+    <ul>
+      <li><a href="/experiences/">Classic django project</a></li>
+      <li><a href="/feedback/">Celery in action: send email & more to come</a></li>
+    </ul>
+</section>
 
 <section class='container'>
           <hgroup>
