cleaning up template to point to the django app experiences

--- a/welcome/templates/welcome/index.html
+++ b/welcome/templates/welcome/index.html
@@ -209,7 +209,12 @@ pre {
 
 </head>
 <body>
-
+<section class='extended_links'>
+    <h4>Extended links</h4>
+    <ul>
+      <li><a href="/experiences/">Classic django project</a></li>
+    </ul>
+</section>
 <section class='container'>
           <hgroup>
             <h1>Welcome to your Django application on OpenShift</h1>
