--- a/welcome/templates/welcome/index.html
+++ b/welcome/templates/welcome/index.html
@@ -210,10 +210,13 @@ pre {
 </head>
 <body>
 <section class='extended_links'>
-    <h4>Extended links</h4>
+    <h4>Now using rabbitmq for the celery broker url</h4>
+    <p>As in previous versions, see <a href="http://michal.karzynski.pl/blog/2014/05/18/setting-up-an-asynchronous-task-queue-for-django-using-celery-redis/">for details on watching the celery jobs</a></p>
+    <h5>Extended links</h5>
     <ul>
       <li><a href="/experiences/">Classic django project</a></li>
-      <li><a href="/feedback/">Celery in action: send email & more to come</a></li>
+      <li><a href="/feedback/">Celery in action: send email</a></li>
+      <li><a href="/photos/">Celery in action: featuring celery periodic jobs</a></li>
     </ul>
 </section>
 
