updating template to be more accurate

--- a/welcome/templates/welcome/index.html
+++ b/welcome/templates/welcome/index.html
@@ -211,7 +211,7 @@ pre {
 <body>
 <section class='extended_links'>
     <h4>Now using rabbitmq for the celery broker url</h4>
-    <p>As in version 3, see <a href="http://michal.karzynski.pl/blog/2014/05/18/setting-up-an-asynchronous-task-queue-for-django-using-celery-redis/">for details on watching the celery jobs</a></p>
+    <p>As in previous versions, see <a href="http://michal.karzynski.pl/blog/2014/05/18/setting-up-an-asynchronous-task-queue-for-django-using-celery-redis/">for details on watching the celery jobs</a></p>
     <h5>Extended links</h5>
     <ul>
       <li><a href="/experiences/">Classic django project</a></li>
