--- a/welcome/templates/welcome/index.html
+++ b/welcome/templates/welcome/index.html
@@ -217,6 +217,7 @@ pre {
       <li><a href="/experiences/">Classic django project</a></li>
       <li><a href="/feedback/">Celery in action: send email</a></li>
       <li><a href="/photos/">Celery in action: featuring celery periodic jobs</a></li>
+      <li><a href="/api/">REST API: just enter a random fqdn and then watch the job link.  In 50 sec the job will __complete__.</a></li>
     </ul>
 </section>
 
